[package]
name = "tetrice"
description = "Provides the core functions of Tetris"
version = "0.1.0"
edition = "2021"
author = ["Tetraliane"]
repository = "https://github.com/tetraliane/tetris-core"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["tetris"]
categories = ["game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
